z-index timeline fix

--- a/src/styles/components/ZoomableImage.scss
+++ b/src/styles/components/ZoomableImage.scss
@@ -80,6 +80,7 @@
     &--zoomedIn {
 
         overflow: scroll;
+        z-index: 999;
 
         &::-webkit-scrollbar {
             display: none;
